import("//build/ohos.gni")

ohos_shared_library("yolo") {
  include_dirs = [
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    # opencv头文件
    "/home/hit/wxc/OpenCV/out/include/opencv4",
    "//utils/native/base/include",
    # camera
    "//foundation/multimedia/hit_camera_standard/interfaces/kits/native",
    "//foundation/multimedia/hit_camera_standard/services/include",
  ]

  libs = [
     "/home/hit/wxc/OpenCV/out/lib/libopencv_gapi.so.4.5.5"          
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_rgbd.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_alphamat.so.4.5.5"      
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_hfs.so.4.5.5"                 
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_saliency.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_aruco.so.4.5.5"         
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_highgui.so.4.5.5"             
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_shape.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_barcode.so.4.5.5"       
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_imgcodecs.so.4.5.5"           
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_stereo.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_bgsegm.so.4.5.5"        
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_img_hash.so.4.5.5"            
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_stitching.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_bioinspired.so.4.5.5"   
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_imgproc.so.4.5.5"             
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_structured_light.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_calib3d.so.4.5.5"       
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_intensity_transform.so.4.5.5" 
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_superres.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_ccalib.so.4.5.5"        
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_line_descriptor.so.4.5.5"     
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_surface_matching.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_core.so.4.5.5"          
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_mcc.so.4.5.5"                 
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_text.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_datasets.so.4.5.5"      
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_ml.so.4.5.5"                  
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_tracking.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_dnn_objdetect.so.4.5.5" 
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_objdetect.so.4.5.5"           
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_videoio.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_dnn.so.4.5.5"           
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_optflow.so.4.5.5"             
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_video.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_dnn_superres.so.4.5.5"  
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_phase_unwrapping.so.4.5.5"    
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_videostab.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_dpm.so.4.5.5"           
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_photo.so.4.5.5"               
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_wechat_qrcode.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_face.so.4.5.5"          
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_plot.so.4.5.5"                
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_xfeatures2d.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_features2d.so.4.5.5"    
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_quality.so.4.5.5"             
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_ximgproc.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_flann.so.4.5.5"         
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_rapid.so.4.5.5"               
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_xobjdetect.so.4.5.5"
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_fuzzy.so.4.5.5"         
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_reg.so.4.5.5"                 
    ,"/home/hit/wxc/OpenCV/out/lib/libopencv_xphoto.so.4.5.5"
  ]

  sources = [
    "native_module_yolo.cpp",
    "yolo.cpp",
  ]

  # 指定编译依赖
  deps = [ 
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
    "//foundation/multimedia/hit_camera_standard/interfaces/kits/native:hit_camera_client"
  ]  

  relative_install_dir = "module"

  subsystem_name = "ace"
  part_name = "napi"

  if (is_standard_system) {
    external_deps = [ 
      "hiviewdfx_hilog_native:libhilog",
      "ipc:ipc_core",
      "samgr_standard:samgr_proxy",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
}